ABS logo update

--- a/MiCorpLtd/pages/index.html
+++ b/MiCorpLtd/pages/index.html
@@ -171,10 +171,9 @@
                 </div>
                 
                 <div class="clients-grid">
-                    <div class="client-logo reveal"><img src="../assets/images/ABS_logo.webp" alt="ABS Client Logo"></div>
+                    <div class="client-logo reveal"><img src="../assets/images/ABS_logo.png" alt="ABS Client Logo"></div>
                     <div class="client-logo reveal delay-1"><img src="../assets/images/UAC_Logo.jpg" alt="UAC Client Logo"></div>
-                    <div class="client-logo reveal delay-2"><img src="../assets/images/clients/client3.png" alt="Client Company 3 Logo"></div>
-                    <div class="client-logo reveal delay-3"><img src="../assets/images/clients/client4.png" alt="Client Company 4 Logo"></div>
+                    <div class="client-logo reveal delay-2"><img src="../assets/images/Bizpro_logo.png" alt="Biz pro"></div>
                 </div>
                 <div class="text-center mt-20 reveal delay-4">
                      <a href="clients.html" class="btn btn-secondary">View All Clients</a>
@@ -237,7 +236,7 @@
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; <span id="currentYear">2024</span> Micorp Trading LLC. All Rights Reserved.</p>
+                <p>&copy; <span id="currentYear">2025</span> Micorp Trading LLC. All Rights Reserved.</p>
             </div>
         </div>
     </footer>
