Logo color fixed

--- a/MiCorpLtd/pages/clients.html
+++ b/MiCorpLtd/pages/clients.html
@@ -6,9 +6,9 @@
     <title>Our Clients | Micorp Trading LLC</title>
     <meta name="description" content="Discover the industry leaders and diverse businesses that trust Micorp Trading LLC for their electronics, IT, and automotive needs.">
     
-    <link rel="stylesheet" href="../CSS/style.css">
-    <link rel="stylesheet" href="../CSS/animations.css">
-    <link rel="stylesheet" href="../CSS/clients.css"> <!-- Specific styles for clients page -->
+    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/animations.css">
+    <link rel="stylesheet" href="../css/clients.css"> <!-- Specific styles for clients page -->
     
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
