--- a/MiCorpLtd/pages/contact.html
+++ b/MiCorpLtd/pages/contact.html
@@ -6,8 +6,8 @@
     <title>Contact Us | Micorp Trading LLC | Bridging Innovation and Reliability</title>
     <meta name="description" content="Get in touch with Micorp Trading LLC, premier general trading company in Dubai specializing in Electronics, IT Products, and Automobiles. Contact us for inquiries and support.">
     
-    <link rel="stylesheet" href="../CSS/style.css">
-    <link rel="stylesheet" href="../CSS/animations.css">
+    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/animations.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <!-- Leaflet CSS -->
