--- a/MiCorpLtd/pages/why-choose-us.html
+++ b/MiCorpLtd/pages/why-choose-us.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Why Choose Us | Micorp Trading LLC</title>
     <meta name="description" content="Discover why Micorp Trading LLC is your ideal partner. We offer proven track record, competitive pricing, exceptional support, and quality assurance.">
-    <link rel="stylesheet" href="../CSS/style.css">
-    <link rel="stylesheet" href="../CSS/animations.css">
+    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/animations.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
 </head>
@@ -272,7 +272,7 @@
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; <span id="currentYear">2024</span> Micorp Trading LLC. All Rights Reserved.</p>
+                <p>&copy; <span id="currentYear">2025</span> Micorp Trading LLC. All Rights Reserved.</p>
             </div>
         </div>
     </footer>
