--- a/MiCorpLtd/pages/about.html
+++ b/MiCorpLtd/pages/about.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Us | Micorp Trading LLC</title>
     <meta name="description" content="Learn about Micorp Trading LLC, your trusted trading partner since 2010, specializing in Electronics, IT Products, and Automobiles in Dubai.">
-    <link rel="stylesheet" href="../CSS/style.css">
-    <link rel="stylesheet" href="../CSS/animations.css">
+    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/animations.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
 </head>
