--- a/MiCorpLtd/pages/automobiles.html
+++ b/MiCorpLtd/pages/automobiles.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Automobiles | Luxury & Commercial Vehicles | Micorp Trading LLC</title>
     <meta name="description" content="Explore luxury and commercial vehicles from Micorp Trading LLC. We offer premium sedans, SUVs, sports cars, pickup trucks, vans, and heavy trucks.">
-    <link rel="stylesheet" href="../CSS/style.css">
-    <link rel="stylesheet" href="../CSS/animations.css">
+    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/animations.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
 </head>
