--- a/MiCorpLtd/pages/index.html
+++ b/MiCorpLtd/pages/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Micorp Trading LLC | Premier Trading Partner</title>
     <meta name="description" content="Premier general trading company in Dubai specializing in Electronics, IT Products, and Automobiles. Your trusted partner in the UAE and beyond.">
-    <link rel="stylesheet" href="../CSS/style.css">
-    <link rel="stylesheet" href="../CSS/animations.css">
+    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/animations.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
 </head>
