--- a/MiCorpLtd/pages/products.html
+++ b/MiCorpLtd/pages/products.html
@@ -6,8 +6,8 @@
     <title>Products & Services | Micorp Trading LLC</title>
     <meta name="description" content="Explore our wide range of Electronics, IT Products, and Automotive solutions offered by Micorp Trading LLC.">
     
-    <link rel="stylesheet" href="../CSS/style.css">
-    <link rel="stylesheet" href="../CSS/animations.css">
+    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/animations.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
@@ -301,7 +301,7 @@
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; <span id="currentYear">2024</span> Micorp Trading LLC. All Rights Reserved.</p>
+                <p>&copy; <span id="currentYear">2025</span> Micorp Trading LLC. All Rights Reserved.</p>
             </div>
         </div>
     </footer>
