--- a/MiCorpLtd/pages/index.html
+++ b/MiCorpLtd/pages/index.html
@@ -13,6 +13,7 @@
      <!-- PWA Enhancements -->
     <link rel="manifest" href="../manifest.json">
     <meta name="theme-color" content="#00b8d4">
+    <link rel="icon" href="../assets/images/icons/icon-144x144.png">
     <link rel="apple-touch-icon" href="../assets/images/icons/icon-192x192.png">
 
     <!-- JSON-LD Structured Data -->
