--- a/MiCorpLtd/pages/about.html
+++ b/MiCorpLtd/pages/about.html
@@ -91,14 +91,14 @@
                 <div class="about-grid">
                     <div class="about-text reveal animate-from-left">
                         <h2>Our Story</h2>
-                        <p>Founded in 2010, Micorp Trading LLC has grown from a small trading company to a premier general trading company in Dubai, specializing in Electronics, IT Products, and Automobiles.</p>
-                        <p>With our headquarters in the heart of Dubai, we've built a reputation for reliability, quality, and exceptional customer service across the UAE and beyond.</p>
+                        <p>Micorp Trading LLC is a premier general trading company based in Dubai, UAE. With a focus on Electronics, IT Products, and Automobiles, we serve as a trusted partner for businesses and consumers seeking reliable, cutting-edge technology and automotive solutions.</p>
+                        <br><p>Our commitment to excellence and customer satisfaction has established us as a reliable source for top-tier products that meet the highest industry standards.</p><br>
                         
                         <h2>Our Mission</h2>
-                        <p>To bridge innovation and reliability by providing high-quality products and exceptional service to our clients, while maintaining the highest standards of business ethics and fostering sustainable growth.</p>
+                        <p>To be the preferred general trading partner by offering a broad range of top-quality electronics, IT products, and automobiles, while consistently exceeding customer expectations through reliable service, integrity, and innovative solutions.</p><br>
                         
                         <h2>Our Vision</h2>
-                        <p>To become the most trusted and innovative trading partner in the region, known for our integrity, comprehensive product portfolio, and unwavering customer-centric approach.</p>
+                        <p>To become a global leader in trading by providing innovative, high-quality products, ensuring sustainable growth, and contributing positively to the industries we serve.</p>
                     </div>
                     <div class="about-image reveal animate-from-right">
                         <img src="../assets/images/Our-office.jpg" alt="Micorp Office Interior">
