--- a/MiCorpLtd/pages/clients.html
+++ b/MiCorpLtd/pages/clients.html
@@ -93,7 +93,7 @@
             <div class="container">
                 <div class="section-header">
                     <h2 class="reveal" data-animate="title">Our Client Portfolio</h2>
-                    <p class="reveal delay-1" data-animate="subtitle">Discover the prestigious organizations that trust our services and solutions.</p>
+                    <p class="reveal delay-1" data-animate="subtitle">We are proud to have served esteemed clients such as:</p>
                 </div>
 
                 <div class="industry-filter reveal">
