--- a/MiCorpLtd/pages/index.html
+++ b/MiCorpLtd/pages/index.html
@@ -101,8 +101,8 @@
                 <div class="about-content">
                     <div class="about-text reveal animate-from-left">
                         <h3>Our Story</h3>
-                        <p>Founded in 2010, Micorp Trading LLC has established itself as a premier general trading company in Dubai, specializing in Electronics, IT Products, and Automobiles.</p>
-                        <p>With our headquarters in the heart of Dubai, we've built a reputation for reliability, quality, and exceptional customer service across the UAE and globally.</p>
+                        <p>At Micorp Trading LLC, we specialize in delivering high-quality products across Electronics, IT, and Automotive sectors. Strategically located in Dubai, UAE, we connect global brands with regional markets, ensuring excellence and customer satisfaction in every transaction.</p>
+                        <br><p>With over a decade of experience, we have established ourselves as a trusted partner for businesses looking to source top-tier products. Our commitment to quality, reliability, and customer service sets us apart in the competitive trading landscape.</p>
                         <a href="about.html" class="btn btn-primary mt-20">Read More About Us</a>
                     </div>
                     <div class="about-image reveal animate-from-right">
