--- a/MiCorpLtd/pages/products.html
+++ b/MiCorpLtd/pages/products.html
@@ -91,12 +91,12 @@
             <div class="container">
                 <div class="section-header">
                     <h2 class="reveal">Electronics</h2>
-                    <p class="reveal delay-1">A comprehensive range of the latest gadgets to essential home appliances.</p>
+                    <p class="reveal delay-1">We offer a comprehensive range of electronics, from the latest gadgets to home appliances. Our offerings include:</p>
                 </div>
                 <div class="products-grid">
                     <div class="product-card reveal">
                         <div class="product-image">
-                            <img src="../assets/images/electronics/mobile-devices.jpg" alt="Mobile Phones and Smart Devices">
+                            <img src="../assets/images/electronics/mobile.webp" alt="Mobile Phones and Smart Devices">
                             <span class="product-badge">Latest Tech</span>
                         </div>
                         <div class="product-info">
@@ -111,7 +111,7 @@
                     </div>
                     <div class="product-card reveal delay-1">
                         <div class="product-image">
-                            <img src="../assets/images/electronics/smart-home.jpg" alt="Smart Home Automation Systems">
+                            <img src="../assets/images/electronics/Smart_home.jpg" alt="Smart Home Automation Systems">
                             <span class="product-badge">Smart Living</span>
                         </div>
                         <div class="product-info">
@@ -126,7 +126,7 @@
                     </div>
                     <div class="product-card reveal delay-2">
                         <div class="product-image">
-                            <img src="../assets/images/electronics/entertainment.jpg" alt="Home Entertainment Systems">
+                            <img src="../assets/images/electronics/Electronics.jpg" alt="Home Entertainment Systems">
                             <span class="product-badge">Premium Audio/Video</span>
                         </div>
                         <div class="product-info">
@@ -141,7 +141,7 @@
                     </div>
                     <div class="product-card reveal delay-3">
                         <div class="product-image">
-                            <img src="../assets/images/electronics/wearables.jpg" alt="Wearable Technology and Gadgets">
+                            <img src="../assets/images/electronics/Wearable.jpg" alt="Wearable Technology and Gadgets">
                             <span class="product-badge">New Arrivals</span>
                         </div>
                         <div class="product-info">
@@ -163,7 +163,7 @@
             <div class="container">
                 <div class="section-header">
                     <h2 class="reveal">IT Products</h2>
-                    <p class="reveal delay-1">Comprehensive IT solutions for your business needs</p>
+                    <p class="reveal delay-1">As a trusted supplier of IT products, we provide:</p>
                 </div>
                 <div class="products-grid">
                     <div class="product-card reveal">
@@ -210,7 +210,7 @@
             <div class="container">
                 <div class="section-header">
                     <h2 class="reveal">Automotive Solutions</h2>
-                    <p class="reveal delay-1">Premium vehicles for discerning clients and robust commercial options</p>
+                    <p class="reveal delay-1">Micorp Trading LLC is a one-stop destination for automobile exports, offering:</p>
                 </div>
                 <div class="vehicles-grid">
                     <div class="vehicle-card reveal">
