--- a/MiCorpLtd/pages/why-choose-us.html
+++ b/MiCorpLtd/pages/why-choose-us.html
@@ -97,29 +97,29 @@
                         <div class="advantage-icon">
                             <i class="fas fa-medal"></i>
                         </div>
-                        <h3>Proven Track Record</h3>
-                        <p>With over a decade in business, we've successfully delivered thousands of products to satisfied clients across diverse industries.</p>
+                        <h3>Wide Product Range</h3>
+                        <p>Diverse selection across electronics, IT, and automotive industries.</p>
                     </div>
                     <div class="advantage-card reveal delay-1">
                         <div class="advantage-icon">
                             <i class="fas fa-handshake"></i>
                         </div>
-                        <h3>Strong Supplier Network</h3>
-                        <p>Our strong relationships with global manufacturers allow us to offer highly competitive prices without compromising on quality.</p>
+                        <h3>Quality Assurance</h3>
+                        <p>Products sourced from internationally recognized brands.</p>
                     </div>
                     <div class="advantage-card reveal delay-2">
                         <div class="advantage-icon">
                             <i class="fas fa-headset"></i>
                         </div>
-                        <h3>Exceptional Support</h3>
-                        <p>Our dedicated support team is committed to providing prompt and effective assistance for any questions or concerns.</p>
+                        <h3>Customer-Centric Approach</h3>
+                        <p>Exceptional customer service and personalized support.</p>
                     </div>
                     <div class="advantage-card reveal delay-3">
                         <div class="advantage-icon">
                             <i class="fas fa-check-double"></i>
                         </div>
-                        <h3>Rigorous Quality Assurance</h3>
-                        <p>All products undergo stringent quality checks to ensure they meet international standards and your specific expectations.</p>
+                        <h3>Competitive Pricing</h3>
+                        <p>Best value without compromising on quality.</p>
                     </div>
                 </div>
             </div>
@@ -135,13 +135,13 @@
                 <div class="process-steps">
                     <div class="process-step reveal">
                         <div class="step-number">1</div>
-                        <h3>Requirement Analysis</h3>
-                        <p>We begin by thoroughly understanding your specific needs, objectives, and operational requirements.</p>
+                        <h3>Timely Delivery</h3>
+                        <p>Robust logistics network ensuring prompt deliveries.</p>
                     </div>
                     <div class="process-step reveal delay-1">
                         <div class="step-number">2</div>
-                        <h3>Tailored Solution Design</h3>
-                        <p>Our experts design the optimal product or service solution tailored precisely to your business.</p>
+                        <h3>Global Reach with Local Expertise</h3>
+                        <p>Leveraging our Dubai presence to cater to regional and international markets.</p>
                     </div>
                     <div class="process-step reveal delay-2">
                         <div class="step-number">3</div>
